--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
   <string name="app_name">TestProject</string>
+  <string name="search_hint">힌트입니다</string>
+  <string name="app_label">라벨입니다</string>
 </resources>
